# process_manager

./: CMakeLists.txt  README.md  package.xml
config/: ui_process_manager.param.yaml
include/ui_process_manager/: ui_process_manager.hpp  ui_process_manager_prime.hpp  ui_process_manager_second.hpp
launch/: ui_process_manager.launch.xml  ui_process_manager_prime.launch.xml  ui_process_manager_second.launch.xml
src/: main.cpp  main_prime.cpp  main_second.cpp  ui_process_manager.cpp  ui_process_manager_prime.cpp  ui_process_manager_second.cpp
